--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,21 +46,13 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 #uncomment if you have defined messages
 #rosbuild_genmsg()
 add_library(irobot_oi src/iRobot/OpenInterface.cpp)
-add_library(go_dock src/GoDock/GoDock.cpp)
+add_library(irobot_oi_400 src/iRobot/OpenInterface_400.cpp)
 
-add_executable(roomba560_node src/roomba560.cpp src/iRobot/OpenInterface.cpp src/GoDock/GoDock.cpp)
-target_link_libraries(roomba560_node cereal_port ${catkin_LIBRARIES})
+add_executable(roomba400_light_node src/roomba400_lightweight.cpp src/iRobot/OpenInterface_400.cpp)
+target_link_libraries(roomba400_light_node cereal_port ${catkin_LIBRARIES})
 
-add_executable(roomba500_light_node src/roomba500_lightweight.cpp src/iRobot/OpenInterface.cpp)
-target_link_libraries(roomba500_light_node cereal_port ${catkin_LIBRARIES})
 
-add_executable(godock_server src/godock_server.cpp src/GoDock/GoDock.cpp)
-target_link_libraries(godock_server ${catkin_LIBRARIES})
-
-add_executable(godock_client src/godock_client.cpp)
-target_link_libraries(godock_client ${catkin_LIBRARIES})
-
-install(TARGETS roomba560_node roomba500_light_node
+install(TARGETS  roomba400_light_node
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
